# lago-agent-sdk-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/lago_agent_sdk/: __init__.py  canonical.py  config.py  detector.py  exceptions.py  lago_client.py  pricing.py  queue.py  sdk.py
src/lago_agent_sdk/adapters/: __init__.py  anthropic_native.py  bedrock_converse.py  bedrock_invoke.py  gemini_native.py  mistral_native.py  openai_native.py
src/lago_agent_sdk/wrappers/: anthropic.py  boto3_bedrock.py  gemini.py  mistral.py  openai.py
tests/: conftest.py  smoke.py
tests/integration/: test_lago_reconciliation.py  test_live_anthropic.py  test_live_bedrock.py  test_live_gemini.py  test_live_mistral.py  test_live_openai.py  test_live_pricing.py  test_live_streaming.py  test_outage_replay.py
tests/unit/: test_async.py  test_buffer_overflow.py  test_drift.py  test_fork.py  test_fuzz.py  test_perf.py  test_pricing.py  test_queue.py  test_sdk.py  test_wrapper_anthropic.py  test_wrapper_bedrock.py  test_wrapper_gemini.py  test_wrapper_mistral.py  test_wrapper_openai.py
tests/unit/adapters/: test_all_models_sweep.py  test_anthropic_native.py  test_bedrock_converse.py  test_bedrock_invoke.py  test_gemini_native.py  test_mistral_all_models_sweep.py  test_mistral_native.py  test_openai_native.py
tests/unit/adapters/fixtures/: capture.py  capture_anthropic.py  capture_gemini.py  capture_mistral.py  capture_mistral_all.py  capture_openai.py
tests/unit/adapters/fixtures/anthropic_native/: 01_plain_haiku.json  02_plain_sonnet.json  03_tool_use.json  04_cache_create_5m.json  05_cache_read.json  06_cache_create_1h.json  07_extended_thinking.json  08_stream.json  09_multi_turn.json
tests/unit/adapters/fixtures/gemini_native/: 01_plain_flash.json  02_tool_use.json  03_streaming.json  04_thinking.json  05_multi_turn.json
tests/unit/adapters/fixtures/mistral_native/: 01_plain_small.json  02_plain_large.json  03_tool_use.json  04_reasoning_magistral.json  05_stream.json  06_multi_turn.json  07_cache_attempt_call1.json  07_cache_attempt_call2.json
tests/unit/fixtures/pricing/: money_golden.json
(+161 files in other folders)
